--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "hubot-scripts": "^2.16.2",
     "hubot-shipit": "^0.2.0",
     "hubot-slack": "^3.4.2",
-    "hubot-slack-gcal": "^0.1.0"
+    "hubot-slack-gcal": "^0.1.0",
+    "hubot-slack-google-auth": "^0.1.1"
   },
   "engines": {
     "node": "0.10.x"
