--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "hubot-shipit": "^0.2.0",
     "hubot-slack": "^3.4.2",
     "hubot-slack-gcal": "nicosnow/hubot-slack-gcal",
-    "hubot-slack-google-auth": "^0.1.1"
+    "hubot-slack-google-auth": "^0.1.1",
+    "hubot-wttr": "0.0.1"
   },
   "engines": {
     "node": "0.10.x"
