--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "description": "robotito de 2brains",
   "dependencies": {
     "hubot": "^2.18.0",
+    "hubot-ascii-art": "^1.1.1",
     "hubot-diagnostics": "0.0.1",
     "hubot-google-images": "^0.2.6",
     "hubot-google-translate": "^0.2.0",
